--- a/wm/i3/install
+++ b/wm/i3/install
@@ -32,23 +32,23 @@ rm $HOME/.config/i3status/config
 rm $HOME/.config/i3/config
 rm $HOME/.config/dunst/dunstrc
 rm $HOME/.config/compton.conf
-rm $HOME/.urxvt/ext/keyboard-select
-rm $HOME/.urxvt/ext/url-select
-rm $HOME/.urxvt/ext/clipboard
+# rm $HOME/.urxvt/ext/keyboard-select
+# rm $HOME/.urxvt/ext/url-select
+# rm $HOME/.urxvt/ext/clipboard
 rm $HOME/.xsettingsd
 rm $HOME/.Xresources
 
 mkdir -p $HOME/.config/i3status
 mkdir -p $HOME/.config/i3
 mkdir -p $HOME/.config/dunst
-mkdir -p $HOME/.urxvt/ext
+# mkdir -p $HOME/.urxvt/ext
 
 ln -s $DOTFILES/wm/i3/.config/i3status/config $HOME/.config/i3status/config
 ln -s $DOTFILES/wm/i3/.config/i3/config $HOME/.config/i3/config
 ln -s $DOTFILES/wm/i3/.config/dunst/dunstrc $HOME/.config/dunst/dunstrc
 ln -s $DOTFILES/wm/i3/.config/compton.conf $HOME/.config/compton.conf
-ln -s $DOTFILES/wm/i3/.urxvt/ext/keyboard-select $HOME/.urxvt/ext/keyboard-select
-ln -s $DOTFILES/wm/i3/.urxvt/ext/url-select $HOME/.urxvt/ext/url-select
-ln -s $DOTFILES/wm/i3/.urxvt/ext/clipboard $HOME/.urxvt/ext/clipboard
+# ln -s $DOTFILES/wm/i3/.urxvt/ext/keyboard-select $HOME/.urxvt/ext/keyboard-select
+# ln -s $DOTFILES/wm/i3/.urxvt/ext/url-select $HOME/.urxvt/ext/url-select
+# ln -s $DOTFILES/wm/i3/.urxvt/ext/clipboard $HOME/.urxvt/ext/clipboard
 ln -s $DOTFILES/wm/i3/.xsettingsd $HOME/.xsettingsd
 ln -s $DOTFILES/wm/i3/.Xresources $HOME/.Xresources
